# GBA-game

./: .gitignore  CMakeLists.txt  commands.txt  devNotes.md
game/: CMakeLists.txt  readme.md
game/img/: background.c  background.h
game/img/farmer_src/: farmer.h  farmer_g.c  farmer_g.h  farmer_win.c  farmer_win.h
game/src/: Farm1Scene.cpp  Farm1Scene.h  SplashScene.cpp  Startscreen.c  Startscreen.h  background.c  background.h  crops.cpp  farm.cpp  farm.h  farmer.c  farmer.h  farmer_player.cpp  farmer_player.h  field.h  lama.c  lama.h  level1_bg_test.h  level1_bg_test2.h  level1_bg_test2_grit.h  level1_bg_test3.c  level1_bg_test3.h  level1_scene.cpp  level1_scene.h  main.cpp  shared.c  shared.h  test.c  test.h  test_scene.cpp  test_scene.h  testbackground.c  testbackground.h  watertower.cpp  watertower.h
game/src/buildings/: barn.cpp  barn.h  building.h  menu.cpp  menu.h
game/src/farmer/: farmer.c  farmer.h  farmer_player.cpp  farmer_player.h
game/src/field/: crops.cpp  crops.h  crops_data.c  crops_data.h  field.cpp  field.h
game/src/scenes/: Farm1Scene.cpp  Farm1Scene.h  SplashScene.cpp  SplashScene.h
test/: maintest.cpp
